--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ h2, h4 {
 	text-align: center;
 }
 .row {
-    margin-right: -15px;
-    margin-left: -15px;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+img.hover {
+	opacity: 0.8px;
 }
